updated to match the latest version

--- a/{{cookiecutter.name}}/MANIFEST.in
+++ b/{{cookiecutter.name}}/MANIFEST.in
@@ -1,5 +1,5 @@
 
-# MaterializeCSS static files
+# Include static files
 include {{cookiecutter.name}}/html/static/css/*
 include {{cookiecutter.name}}/html/static/js/*
 include {{cookiecutter.name}}/html/static/fonts/roboto/*
